[metadata]
name = GANTrainer
version = 0.2
description = Utility for training GANs
url = https://github.com/deoliveirajoshua/pytorch_GAN_Package
classifiers =
    Programming Language :: Python :: 3
long_description = file : README.md
long_description_content_type = text/markdown

[options]
install_requires =
    pandas
    numpy
    matplotlib
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
